--- a/src/templates/lookup.html
+++ b/src/templates/lookup.html
@@ -1,24 +1,28 @@
 <div class="container-fluid">
 
 	<div class="row">
-		<form method="POST" class="form-inline col-md-8 col-md-offset-2" ng-submit="lookup()">
+		<form method="POST" class="form-inline col-md-8 col-md-offset-2" ng-submit="lookup('user')">
 			<div class="form-group text-center" ng-style="{'width':'100%'}">
-				<input id="lookupField" type="text" class="form-control input-lg" ng-model="lookupString" placeholder="Username or Email">
-				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading">User Lookup</button>
+				<input id="lookupField" type="text" class="form-control input-lg" ng-model="lookupString" placeholder="Search for ...">
+			</div>
+			<div class="row text-center">
+				<br>
+				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="lookup('user')">User/Address/Invite</button>
+				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="lookup('domain')">Domain</button>
+				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="lookup('organization')">Organization</button>
 			</div>
 		</form>
 	</div>
 
 	<br>
 
-	<ng-include src="'templates/_info.html'" ng-init="initInfo()"></ng-include>
+	<ng-include src="this.template" ng-if="this.template" ng-init="initInfo()"></ng-include>
 
-	<hr>
+	<div ng-show="!!lookupResponse.length">
+		<hr>
+		<a class="btn btn-link" ng-click="advanced = !advanced">Show / Hide raw response</a>
+	</div>
 
-	<pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'20rem'}">{{ lookupResponse }}</pre>
-
-	<p ng-show="lookupResponse.Users.length || lookupResponse.Invites.length">
-		<a class="btn btn-link" href ng-click="advanced = !advanced">Show / Hide raw response</a>
-	</p>
+	<pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'100%'}">{{ lookupResponse | json }}</pre> <!-- ng-style="{'height':'20rem'}" -->
 
 </div>
