--- a/src/templates/multi.html
+++ b/src/templates/multi.html
@@ -1,34 +1,54 @@
 <div class="container-fluid">
 
-	<form method="POST" ng-submit="debug()">
-		<p class="alert alert-info">Enter multiple emails and usernames to lookup up many users at once. </p>
-		<div class="row">
-		<div class="col-md-6">
-			<textarea class="form-control" ng-style="{'height':'20rem'}" ng-model="csvData"></textarea>
-			<br>
-			<button type="submit" class="btn btn-primary" ng-disabled="loading">MultiLookup</button>
-		</div>
-		<div class="col-md-6">
+	<form method="POST" ng-submit="multilookup('user')">
 
-<label>Example:</label>
-<pre>dcl@protonmail.ch
+		<p class="alert alert-info">Enter multiple rows and click the appropriate to search for multiple entries at once.</p>
+
+		<div class="row">
+			<div class="col-md-6">
+				<textarea class="form-control" ng-style="{'height':'30rem'}" ng-model="csvData"></textarea>
+			</div>
+			<div class="col-md-6">
+
+		<label>Example for users:</label>
+<pre>
 jason
-andy
-contact@protonmail.com
+jason@protonmail.ch
+131
 </pre>
 
+		<label>Example for organizations:</label>
+<pre>
+My Org
+1000
+</pre>
+
+		<label>Example for domains:</label>
+<pre>
+protonmail.ch
+dingchaolu.com
+1000
+</pre>
+
+			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="multilookup('user')">User/Address/Invite</button>
+				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="multilookup('domain')">Domain</button>
+				<button type="submit" class="btn btn-primary btn-lg" ng-disabled="loading" ng-click="multilookup('organization')">Organization</button>
+			</div>
 		</div>
+
 	</form>
 
-	<ng-include src="'templates/_info.html'" ng-init="initInfo()"></ng-include>
+	<ng-include src="this.template" ng-if="this.template" ng-init="initInfo()"></ng-include>
 
-	<hr>
+	<div ng-show="!!lookupResponse.length">
+		<hr>
+		<a class="btn btn-link" ng-click="advanced = !advanced">Show / Hide raw response</a>
+	</div>
 
-	<pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'20rem'}">{{ lookupResponse }}</pre>
-
-	<p ng-show="lookupResponse">
-		<a class="btn btn-link" href ng-click="advanced = !advanced">Show / Hide raw response</a>
-	</p>
+	<pre ng-show="advanced" readonly class="form-control" ng-style="{'height':'100%'}">{{ lookupResponse | json }}</pre> <!-- ng-style="{'height':'20rem'}" -->
 
 </div>
