--- a/src/templates/_organization.html
+++ b/src/templates/_organization.html
@@ -55,13 +55,13 @@
 			</div>
 
 			<div class="list-group-item disabled"></div>
-			<form method="POST" class="list-group-item text-center" ng-submit="deleteOrganization()">
+<!-- 			<form method="POST" class="list-group-item text-center" ng-submit="deleteOrganization()">
 				<input type="hidden" ng-init="OrganizationID=result.OrganizationID" ng-model="OrganizationID">
 				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANNOT BE UNDONE.">
 					<span class="fa fa-trash-o">&nbsp;Delete organization</span>
 				</button>
 			</form>
-		</div>
+ -->		</div>
 	</div>
 
 	<div class="col right">
