--- a/src/templates/_domain.html
+++ b/src/templates/_domain.html
@@ -99,7 +99,6 @@
 				<code class="pull-right">{{ result.DmarcState }}</code>
 			</div>
 
-			<div class="list-group-item disabled"></div>
 <!-- 			<form method="POST" class="list-group-item text-center" ng-submit="deleteDomain()">
 				<input type="hidden" ng-init="DomainID=result.DomainID" ng-model="DomainID">
 				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANNOT BE UNDONE.">
@@ -118,16 +117,16 @@
 				<code class="pull-right">{{ result.OrganizationID }}</code>
 			</div>
 
-			<div class="list-group-item disabled"></div>
 			<div class="list-group-item text-center">
-				<button type="submit" class="btn btn-primary" ng-disabled="loading" ng-click="lookup('organization', this.result.OrganizationID)">
-					<span>Lookup organization</span>
-				</button>
+				<div class="list-group-item text-center">
+					<button type="submit" class="btn btn-primary" ng-disabled="loading" ng-click="lookup('organization', this.result.OrganizationID)">
+						<span>Lookup organization</span>
+					</button>
+				</div>
 			</div>
-
 		</div>
 
-		<div ng-if="result.Addresses" class="list-group">
+		<div ng-if="result.Addresses.lenght" class="list-group">
 			<div class="list-group-item list-group-item-warning">
 				<strong>Addresses</strong>
 			</div>
