--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -30,13 +30,15 @@
 				</form>
 				<div class="clearfix"></div>
 			</div>
-			<div class="list-group-item disabled"></div>
-			<form method="POST" class="list-group-item" ng-submit="sendInvite()">
-				<button type="submit" href class="btn btn-primary">
-					<span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send Invite</span>
-					<span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend Invite</span>
-				</button>
-			</form>
+			<div class="list-group-item text-center">
+				<form method="POST" class="list-group-item text-center" ng-submit="sendInvite()">
+					<button type="submit" href class="btn btn-primary">
+						<span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send invite</span>
+						<span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend invite</span>
+					</button>
+				</form>
+			</div>
+
 			<div class="list-group-item">
 				<code class="pull-right" ng-if="result.Invite.CreateTime!=0">
 				{{ result.Invite.CreateTime*1000 | date:'medium' }}
@@ -54,13 +56,14 @@
 				<br>
 				<pre ng-show="{{ result.Invite.Comment!='' }}">{{ result.Invite.Comment }}</pre>
 			</div>
-			<div class="list-group-item disabled"></div>
-			<form method="POST" class="list-group-item" ng-submit="deleteUserWL()">
-				<input type="hidden" ng-init="accountID=result.Invite.UserID" ng-model="accountID">
-				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
-					<span class="fa fa-trash-o"></span> Delete from Waiting List
-				</button>
-			</form>
+			<div class="list-group-item text-center">
+				<form method="POST" class="list-group-item text-center" ng-submit="deleteUserWL()">
+					<input type="hidden" ng-init="accountID=result.Invite.UserID" ng-model="accountID">
+					<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+						<span class="fa fa-trash-o"></span> Delete from waiting List
+					</button>
+				</form>
+			</div>
 		</div>
 
 		<div ng-if="result.Addresses" class="list-group">
@@ -109,7 +112,7 @@
 				</form>
 				<div class="clearfix"></div>
 			</div>
-			<div class="list-group-item disabled"></div>
+
 			<div class="list-group-item">
 				<form method="POST" class="input-group" ng-submit="updateLoginPassword()">
 					<input type="text" class="form-control mono" id="resetLoginPW" ng-init="newLoginPass = randPass()" ng-model="newLoginPass">
@@ -122,13 +125,15 @@
 				</form>
 				<div class="clearfix"></div>
 			</div>
-			<form method="POST" class="list-group-item" ng-submit="logoutUser()">
-				<input type="hidden" ng-init="accountID=result.User.UserID" ng-model="accountID">
-				<button type="submit" href class="btn btn-warning">
-					<span class="fa fa-power-off"></span> Logout User
-				</button>
-			</form>
-			<div class="list-group-item disabled"></div>
+			<div class="list-group-item text-center">
+				<form method="POST" class="list-group-item text-center" ng-submit="logoutUser()">
+					<input type="hidden" ng-init="accountID=result.User.UserID" ng-model="accountID">
+					<button type="submit" href class="btn btn-warning">
+						<span class="fa fa-power-off"></span> Logout user
+					</button>
+				</form>
+			</div>
+
 			<div class="list-group-item">
 				<code class="pull-right" ng-if="result.User.LastLoginTime!=0">
 				{{ result.User.LastLoginTime*1000 | date:'medium' }}
@@ -202,13 +207,45 @@
 				</div>
 				<strong>User Level:</strong>
 			</form>
-			<div class="list-group-item disabled"></div>
-			<form method="POST" class="list-group-item" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteUserAU()">
-				<input type="hidden" ng-init="accountID=result.User.UserID" ng-model="accountID">
-				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
-					<span class="fa fa-trash-o"></span> Delete from Active Users
-				</button>
-			</form>
+			<div class="list-group-item text-center">
+				<form method="POST" class="list-group-item text-center" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteUserAU()">
+					<input type="hidden" ng-init="accountID=result.User.UserID" ng-model="accountID">
+					<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+						<span class="fa fa-trash-o"></span> Delete from Active Users
+					</button>
+				</form>
+			</div>
+		</div>
+
+		<div ng-if="result.User.ExternalProvider != 0 && result.User.ExternalCustomerID != null" class="list-group">
+			<div class="list-group-item list-group-item-warning">
+				<strong>Payments</strong>
+			</div>
+			<div class="list-group-item">
+				<strong>ExternalProvider:</strong>
+				<code class="pull-right">{{ result.User.ExternalProvider }}</code>
+			</div>
+			<div class="list-group-item">
+				<strong>ExternalCustomerID:</strong>
+				<code class="pull-right">{{ result.User.ExternalCustomerID }}</code>
+			</div>
+			<div class="list-group-item text-center">
+				<div class="list-group-item">
+					<form method="POST" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteCustomer()" style="display: inline-block">
+						<input type="hidden" ng-init="accountID = result.User.UserID" ng-model="accountID">
+						<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+							<span class="fa fa-trash-o"></span> Delete customer
+						</button>
+					</form>
+					&nbsp;
+					<form method="POST" ng-show="{{ user.Scope=='admin super' || 'admin' }}" ng-submit="unsubscribeCustomer()" style="display: inline-block">
+						<input type="hidden" ng-init="accountID = result.User.UserID" ng-model="accountID">
+						<button type="submit" class="btn btn-warning" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+							<span class="fa fa-retweet"></span> Unsubscribe customer
+						</button>
+					</form>
+				</div>
+			</div>
 		</div>
 
 		<div ng-if="result.Organization" class="list-group">
@@ -219,11 +256,12 @@
 				<code class="pull-right">{{ result.Organization.OrganizationID }}</code>
 				<strong>OrganizationID:</strong>
 			</div>
-			<div class="list-group-item disabled"></div>
 			<div class="list-group-item text-center">
-				<button type="submit" class="btn btn-primary" ng-disabled="loading" ng-click="lookup('organization', this.result.Organization.OrganizationID)">
-					<span>Lookup organization</span>
-				</button>
+				<div class="list-group-item text-center">
+					<button type="submit" class="btn btn-primary" ng-disabled="loading" ng-click="lookup('organization', this.result.Organization.OrganizationID)">
+						<span>Lookup organization</span>
+					</button>
+				</div>
 			</div>
 		</div>
 
