--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -160,6 +160,10 @@
 			<div class="list-group-item">
 				<form method="POST" class="pull-right status" ng-show="{{ user.Scope === 'admin' }}">
 					<input type="hidden" ng-init="accountID=result.User.UserID" ng-model="accountID" />
+					<button type="button" disabled class="btn btn-default btn-xs"
+						ng-class="{'btn-primary': result.User.Status===0}">
+						Deleted
+					</button>
 					<button ng-click="changeStatus(1, account)" type="submit" ng-disabled="{{ result.User.Status == 3 || result.User.Status == 4 }}" class="btn btn-default btn-xs"
 					ng-class="{'btn-primary': result.User.Status===1}">
 						Disabled
@@ -179,6 +183,10 @@
 				</form>
 				<form method="POST" class="pull-right status" ng-show="{{ user.Scope === 'admin super' }}">
 					<input type="hidden" ng-init="accountID=result.User.UserID" ng-model="accountID">
+					<button type="button" disabled class="btn btn-default btn-xs"
+						ng-class="{'btn-primary': result.User.Status==0}">
+						Deleted
+					</button>
 					<button ng-click="changeStatus(1, account)" type="submit" ng-disabled="{{ result.User.Status == 4 }}" class="btn btn-default btn-xs"
 						ng-class="{'btn-primary': result.User.Status==1}">
 						Disabled
