--- a/src/templates/_domain.html
+++ b/src/templates/_domain.html
@@ -3,7 +3,7 @@
 <div class="row results" ng-if="response.Results.length" ng-repeat="result in response.Results">
 
 	<!-- User lookup results -->
-	<h1 ng-if="result.DomainName">{{ result.DomainName }}</h1>
+	<h1 ng-if="result.DomainID">{{ result.DomainName }}</h1>
 
 	<div class="col">
 		<div ng-if="result.DomainName" class="list-group">
