Adding type to addresses

--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -86,6 +86,12 @@
 						(<code>{{ x.Receive }}</code>)
 					</div>
 				</div>
+				<div class="list-group-item">
+					<strong>Type</strong>
+					<div class="pull-right">
+						<code>{{ x.Type }}</code>
+					</div>
+				</div>
 			</div>
 		</div>
 
